--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recharts": "^2.15.3",
+    "systeminformation": "^5.27.1",
     "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
