--- a/server/package.json
+++ b/server/package.json
@@ -2,12 +2,13 @@
   "dependencies": {
     "@xenova/transformers": "^2.17.2",
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "systeminformation": "^5.27.1"
   },
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
-    "type": "module",
+  "type": "module",
   "scripts": {
     "start": "node index.js"
   },
